--- a/Arrays/CMakeLists.txt
+++ b/Arrays/CMakeLists.txt
@@ -5,5 +5,6 @@ cmake_minimum_required (VERSION 3.8)
 
 # Add source to this project's executable.
 add_executable (ReverseArray "ReverseArray.cpp")
+add_executable (MergeSortedArrays "MergeSortedArrays.cpp")
 
 # TODO: Add tests and install targets if needed.
