Added Move Zeros problem

--- a/Arrays/CMakeLists.txt
+++ b/Arrays/CMakeLists.txt
@@ -8,5 +8,6 @@ add_executable (ReverseArray "ReverseArray.cpp")
 add_executable (MergeSortedArrays "MergeSortedArrays.cpp")
 add_executable(TwoSum "TwoSum.cpp")
 add_executable(MaxSubArraySum "MaxSubArraySum.cpp")
+add_executable(MoveZeros "MoveZeros.cpp")
 
 # TODO: Add tests and install targets if needed.
