Added contains duplicate array problem

--- a/Arrays/CMakeLists.txt
+++ b/Arrays/CMakeLists.txt
@@ -9,5 +9,6 @@ add_executable (MergeSortedArrays "MergeSortedArrays.cpp")
 add_executable(TwoSum "TwoSum.cpp")
 add_executable(MaxSubArraySum "MaxSubArraySum.cpp")
 add_executable(MoveZeros "MoveZeros.cpp")
+add_executable(ContainsDuplicate "ContainsDuplicate.cpp")
 
 # TODO: Add tests and install targets if needed.
