--- a/Queues/CMakeLists.txt
+++ b/Queues/CMakeLists.txt
@@ -2,8 +2,9 @@
 # project specific logic here.
 #
 cmake_minimum_required (VERSION 3.8)
+add_compile_options(-std=c++11)
 
 # Add source to this project's executable.
-add_executable (TestList "TestList.cpp" "../Utils/DoublyLinkedList.h")
+add_executable (TestPQueue "TestPQueue.cpp" "../Utils/PriorityQueue.h")
 
 # TODO: Add tests and install targets if needed.
