--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,4 +11,5 @@ add_subdirectory ("AdHocProblems")
 add_subdirectory("Arrays")
 add_subdirectory("LinkedLists")
 add_subdirectory("Queues")
+add_subdirectory("Trees")
 
