--- a/Arrays/CMakeLists.txt
+++ b/Arrays/CMakeLists.txt
@@ -12,5 +12,5 @@ add_executable(MoveZeros "MoveZeros.cpp")
 add_executable(ContainsDuplicate "ContainsDuplicate.cpp")
 add_executable(LongestWord "LongestWord.cpp")
 add_executable(RearrangeArray "RearrangeArray.cpp")
-
+add_executable(SearchRotatedSortedArray "SearchRotatedSortedArray.cpp" "../Utils/Utils.h")
 # TODO: Add tests and install targets if needed.
