--- a/AdHocProblems/CMakeLists.txt
+++ b/AdHocProblems/CMakeLists.txt
@@ -5,5 +5,6 @@ cmake_minimum_required (VERSION 3.8)
 
 # Add source to this project's executable.
 add_executable (ShiftArray "ShiftArray.cpp")
+add_executable(HanoiTower "HanoiTower.cpp")
 
 # TODO: Add tests and install targets if needed.
