--- a/LInkedLists/CMakeLists.txt
+++ b/LInkedLists/CMakeLists.txt
@@ -5,5 +5,6 @@ cmake_minimum_required (VERSION 3.8)
 
 # Add source to this project's executable.
 add_executable (TestList "TestList.cpp" "../Utils/DoublyLinkedList.h")
+add_executable (ReverseList "ReverseList.cpp" "../Utils/LinkedList.h")
 
 # TODO: Add tests and install targets if needed.
